@@ -22,8 +22,6 @@ CFLAGS="-framework Python" to get python API to compile on OS X
 
 HFS is case insensitive but case preserving, need INSTALL.txt hack for OS X
 
-python DB stops other threads
-
 --------------------------------------------------------------------------------
 
 setting backlog:
